# vibelocal-api

./: .env  app.py  dump-vibelocal-202502040315-structure.sql  dump-vibelocal-202502040315.sql  pyproject.toml
config/: db_config.py
controllers/: cart_items.py  order_products.py  orders.py  products.py  shops.py  users.py
